sort.basic.insertion.AlgInsertionSort.scala.error
Erreur de compilation :
AlgInsertionSort:3: error: not found: value i
var v=getValeur(i)
                ^AlgInsertionSort:7: error: type mismatch;
 found   : Int
 required: Boolean
   while(j>0 && getValeur(j-1>v)){
                         ^